--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/06_ReadWriteBinaryFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/06_ReadWriteBinaryFile.ipynb
@@ -12,8 +12,7 @@
     "- length: LongType\n",
     "- content: BinaryType\n",
     "\n",
-    "\n",
-    "To read whole binary files, you need to specify the data source format as binaryFile. To load files with paths matching a given glob pattern while keeping the behavior of partition discovery, you can use the general data source option pathGlobFilter. For example, the following code reads all PNG files from the input directory:"
+    "Even though spark can read binary file now, but it does not provide many operations that can treat binary files. So you need to define many UDF, which is not well parallelized at all. So we don't recommend this if you have other better options. For a complete image processing example, please visit this https://github.com/pengfei99/SparkStreamingCV/blob/main/notebook/FaceMaskDetectionBatchModelS3SSPLab.ipynb\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,6 +114,18 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To read whole binary files, you need to specify the data source format as binaryFile. To load files with paths matching a given glob pattern while keeping the behavior of partition discovery, you can use the general data source option pathGlobFilter. For example, the following code reads all PNG files from the input directory:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
