--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/06_ReadWriteBinaryFile.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/06_ReadWriteBinaryFile.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from PIL import Image\n",
+    "from IPython.core.display_functions import display\n",
     "import io\n",
     "import os"
    ],
