--- a/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/01_ReadWritePostgresql.ipynb
+++ b/notebooks/pysparkbasics/L03_ReadFromVariousDataSource/01_ReadWritePostgresql.ipynb
@@ -48,32 +48,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/jars/spark-unsafe_2.12-3.2.0.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":: loading settings :: url = jar:file:/opt/spark/jars/ivy-2.5.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ivy Default Cache set to: /home/jovyan/.ivy2/cache\n",
+      "The jars for the packages stored in: /home/jovyan/.ivy2/jars\n",
+      "org.postgresql#postgresql added as a dependency\n",
+      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-ef9e7f5a-15fb-4a43-8c78-a8275b48a833;1.0\n",
+      "\tconfs: [default]\n",
+      "\tfound org.postgresql#postgresql;42.2.24 in central\n",
+      "\tfound org.checkerframework#checker-qual;3.5.0 in central\n",
+      "downloading https://repo1.maven.org/maven2/org/postgresql/postgresql/42.2.24/postgresql-42.2.24.jar ...\n",
+      "\t[SUCCESSFUL ] org.postgresql#postgresql;42.2.24!postgresql.jar (134ms)\n",
+      "downloading https://repo1.maven.org/maven2/org/checkerframework/checker-qual/3.5.0/checker-qual-3.5.0.jar ...\n",
+      "\t[SUCCESSFUL ] org.checkerframework#checker-qual;3.5.0!checker-qual.jar (28ms)\n",
+      ":: resolution report :: resolve 773ms :: artifacts dl 167ms\n",
+      "\t:: modules in use:\n",
+      "\torg.checkerframework#checker-qual;3.5.0 from central in [default]\n",
+      "\torg.postgresql#postgresql;42.2.24 from central in [default]\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|                  |            modules            ||   artifacts   |\n",
+      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
+      "\t---------------------------------------------------------------------\n",
+      "\t|      default     |   2   |   2   |   2   |   0   ||   2   |   2   |\n",
+      "\t---------------------------------------------------------------------\n",
+      ":: retrieving :: org.apache.spark#spark-submit-parent-ef9e7f5a-15fb-4a43-8c78-a8275b48a833\n",
+      "\tconfs: [default]\n",
+      "\t2 artifacts copied, 0 already retrieved (1192kB/10ms)\n",
+      "2022-04-04 13:26:38,180 WARN util.NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "2022-04-04 13:26:40,922 WARN spark.ExecutorAllocationManager: Dynamic allocation without a shuffle service is an experimental feature.\n"
+     ]
+    }
+   ],
    "source": [
-    "local=True\n",
+    "local=False\n",
     "if local:\n",
     "    spark=SparkSession.builder.master(\"local[4]\") \\\n",
     "                  .config('spark.jars.packages', 'org.postgresql:postgresql:42.2.24') \\\n",
     "                  .appName(\"RemoveDuplicates\").getOrCreate()\n",
+    "    db_url=\"jdbc:postgresql://localhost:5432/test\"\n",
+    "    table_name=\"employee\"\n",
+    "    user=\"pengfei\"\n",
+    "    password=\"toto\"\n",
     "else:\n",
     "    spark=SparkSession.builder \\\n",
     "                      .master(\"k8s://https://kubernetes.default.svc:443\") \\\n",
     "                      .appName(\"RemoveDuplicates\") \\\n",
-    "                      .config(\"spark.kubernetes.container.image\",\"inseefrlab/jupyter-datascience:master\") \\\n",
+    "                      .config(\"spark.kubernetes.container.image\",os.environ['IMAGE_NAME']) \\\n",
     "                      .config(\"spark.kubernetes.authenticate.driver.serviceAccountName\",os.environ['KUBERNETES_SERVICE_ACCOUNT']) \\\n",
     "                      .config(\"spark.kubernetes.namespace\", os.environ['KUBERNETES_NAMESPACE']) \\\n",
     "                      .config(\"spark.executor.instances\", \"4\") \\\n",
     "                      .config(\"spark.executor.memory\",\"8g\") \\\n",
-    "                      .config(\"spark.kubernetes.driver.pod.name\", os.environ[\"POD_NAME\"]) \\\n",
     "                      .config('spark.jars.packages','org.postgresql:postgresql:42.2.24') \\\n",
-    "                      .getOrCreate()"
+    "                      .getOrCreate()\n",
+    "    db_url=\"jdbc:postgresql://postgresql-124499:5432/test\"\n",
+    "    table_name=\"employee\"\n",
+    "    user=\"user-pengfei\"\n",
+    "    password=\"toto\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +148,20 @@
       " |-- emp_dept_id: string (nullable = true)\n",
       " |-- gender: string (nullable = true)\n",
       " |-- salary: long (nullable = true)\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 1:===================>                                       (1 + 2) / 3]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "+------+--------+---------------+------------------+-----------+------+------+\n",
       "|emp_id|name    |superior_emp_id|dept_creation_year|emp_dept_id|gender|salary|\n",
       "+------+--------+---------------+------------------+-----------+------+------+\n",
@@ -100,6 +173,13 @@
       "|6     |Foobar  |2              |2010              |150        |F     |-1    |\n",
       "+------+--------+---------------+------------------+-----------+------+------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -185,15 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# postgresql connexion config\n",
-    "db_url=\"jdbc:postgresql://postgresql-955091:5432/test\"\n",
-    "table=\"employee\"\n",
-    "user=\"pengfei\"\n",
-    "password=\"test\"\n",
     "driver=\"org.postgresql.Driver\"\n",
     "# note the driver value need to be changed if you use other database\n",
     "# e.g. Mysql: com.mysql.jdbc.Driver\n",
@@ -203,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,12 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# We use solution 2 to write to a table named employee\n",
-    "df.write.jdbc(url=db_url,table=table,mode='overwrite',properties=db_properties)"
+    "# note that the db_properties is a dictionary that contains user and password\n",
+    "df.write.jdbc(url=db_url,table=table_name,mode='overwrite',properties=db_properties)"
    ]
   },
   {
@@ -364,7 +449,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -378,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
