add first last window function

--- a/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -90,16 +90,35 @@
     "    min, max, sum, round, count, datediff, unix_timestamp, stddev, collect_list, element_at, size, sort_array, \\\n",
     "    broadcast, spark_partition_id, lit, coalesce\n",
     "\n",
-    "from pyspark.sql.window import Window"
+    "from pyspark.sql.window import Window\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "22/04/12 09:16:24 WARN Utils: Your hostname, ubuntu resolves to a loopback address: 127.0.1.1; using 192.168.184.146 instead (on interface ens33)\n",
+      "22/04/12 09:16:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/opt/spark/spark-3.1.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "22/04/12 09:16:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
+     ]
+    }
+   ],
    "source": [
-    "local=False\n",
+    "local=True\n",
     "\n",
     "if local:\n",
     "    spark = SparkSession.builder.master(\"local[2]\").appName(\"WindowsFunctions\").getOrCreate()\n",
@@ -118,25 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "21/09/19 06:26:35 WARN Utils: Your hostname, localhost.localdomain resolves to a loopback address: 127.0.0.1; using 192.168.184.142 instead (on interface ens33)\n",
-      "21/09/19 06:26:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "21/09/19 06:26:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -246,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +376,7 @@
     }
    ],
    "source": [
-    "# create a new column with rank ranking function\n",
+    "# create a new column with rank() ranking function\n",
     "# Note that for Alex partition, there is no rank2, because we have two items in rank 1, the third item goes to\n",
     "# rank 3. If you want compact rank number, use dense rank\n",
     "df2 = df.withColumn(\"rank\", rank().over(win_name_ordered))\n",
@@ -520,11 +527,25 @@
     "## 1.4 Analytic function examples\n",
     "In this example, we show how to use analytic functions on ordered frame\n",
     "- cume_dist\n",
+    "- first\n",
+    "- last\n",
     "- lag\n",
     "- lead\n",
     "\n",
     "Note all above window functions require that the **frame are ordered**."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.4.1 cum_dist"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -569,6 +590,311 @@
     "df_cume_dist.printSchema()\n",
     "df_cume_dist.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.4.2 first\n",
+    "\n",
+    "First will return the first element of each partition. The ordering of the partition is defined by the orderBy. If no order by is presented, the order is defined by the partition"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+-----+-----+\n",
+      "|name|      date|  product|price|first|\n",
+      "+----+----------+---------+-----+-----+\n",
+      "|Alex|2018-02-18|   Gloves|    5|    5|\n",
+      "|Alex|2018-03-03|  Brushes|   30|    5|\n",
+      "|Alex|2018-04-02|   Ladder|   20|    5|\n",
+      "|Alex|2018-06-22|    Stool|   20|    5|\n",
+      "|Alex|2018-07-12|   Bucket|    5|    5|\n",
+      "|Alex|2018-09-26|Sandpaper|   10|    5|\n",
+      "|Alex|2018-10-10|    Paint|   80|    5|\n",
+      "|Alex|2018-12-09|   Vacuum|   40|    5|\n",
+      "| Bob|2018-02-18|   Gloves|    5|    5|\n",
+      "| Bob|2018-03-03|  Brushes|   30|    5|\n",
+      "| Bob|2018-07-12|   Bucket|    5|    5|\n",
+      "| Bob|2018-09-26|Sandpaper|   10|    5|\n",
+      "| Bob|2018-12-09|   Vacuum|   40|    5|\n",
+      "+----+----------+---------+-----+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import first, last\n",
+    "df_first=df.withColumn(\"first\",first(col(\"price\")).over(win_name_ordered_by_date))\n",
+    "df_first.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.4.3 Last\n",
+    "\n",
+    "A little surprise for last. It does not return the last element of each partition. It returns the current row value. Check below example\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+-----+----+\n",
+      "|name|      date|  product|price|last|\n",
+      "+----+----------+---------+-----+----+\n",
+      "|Alex|2018-02-18|   Gloves|    5|   5|\n",
+      "|Alex|2018-03-03|  Brushes|   30|  30|\n",
+      "|Alex|2018-04-02|   Ladder|   20|  20|\n",
+      "|Alex|2018-06-22|    Stool|   20|  20|\n",
+      "|Alex|2018-07-12|   Bucket|    5|   5|\n",
+      "|Alex|2018-09-26|Sandpaper|   10|  10|\n",
+      "|Alex|2018-10-10|    Paint|   80|  80|\n",
+      "|Alex|2018-12-09|   Vacuum|   40|  40|\n",
+      "| Bob|2018-02-18|   Gloves|    5|   5|\n",
+      "| Bob|2018-03-03|  Brushes|   30|  30|\n",
+      "| Bob|2018-07-12|   Bucket|    5|   5|\n",
+      "| Bob|2018-09-26|Sandpaper|   10|  10|\n",
+      "| Bob|2018-12-09|   Vacuum|   40|  40|\n",
+      "+----+----------+---------+-----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_last=df.withColumn(\"last\",last(col(\"price\")).over(win_name_ordered_by_date))\n",
+    "df_last.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "This is not a bug of spark last() function. This is due to how window frame works in a window function.\n",
+    "\n",
+    "Check below example, the output of explain(). The range frame is **specifiedwindowframe(RangeFrame, unboundedpreceding$(), currentrow$())**, the first row is the first row of all already read row (so far so good). But the last row is the current row, because it can't know which row is the last row of the partition during iteration."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+-----+-----------+----------+\n",
+      "|name|      date|  product|price|first_price|last_price|\n",
+      "+----+----------+---------+-----+-----------+----------+\n",
+      "|Alex|2018-02-18|   Gloves|    5|          5|         5|\n",
+      "|Alex|2018-03-03|  Brushes|   30|          5|        30|\n",
+      "|Alex|2018-04-02|   Ladder|   20|          5|        20|\n",
+      "|Alex|2018-06-22|    Stool|   20|          5|        20|\n",
+      "|Alex|2018-07-12|   Bucket|    5|          5|         5|\n",
+      "|Alex|2018-09-26|Sandpaper|   10|          5|        10|\n",
+      "|Alex|2018-10-10|    Paint|   80|          5|        80|\n",
+      "|Alex|2018-12-09|   Vacuum|   40|          5|        40|\n",
+      "| Bob|2018-02-18|   Gloves|    5|          5|         5|\n",
+      "| Bob|2018-03-03|  Brushes|   30|          5|        30|\n",
+      "| Bob|2018-07-12|   Bucket|    5|          5|         5|\n",
+      "| Bob|2018-09-26|Sandpaper|   10|          5|        10|\n",
+      "| Bob|2018-12-09|   Vacuum|   40|          5|        40|\n",
+      "+----+----------+---------+-----+-----------+----------+\n",
+      "\n",
+      "== Physical Plan ==\n",
+      "Window [first(price#3L, false) windowspecdefinition(name#0, date#1 ASC NULLS FIRST, specifiedwindowframe(RangeFrame, unboundedpreceding$(), currentrow$())) AS first_price#8230L, last(price#3L, false) windowspecdefinition(name#0, date#1 ASC NULLS FIRST, specifiedwindowframe(RangeFrame, unboundedpreceding$(), currentrow$())) AS last_price#8232L], [name#0], [date#1 ASC NULLS FIRST]\n",
+      "+- *(2) Sort [name#0 ASC NULLS FIRST, date#1 ASC NULLS FIRST], false, 0\n",
+      "   +- Exchange hashpartitioning(name#0, 200), ENSURE_REQUIREMENTS, [id=#667]\n",
+      "      +- *(1) Scan ExistingRDD[name#0,date#1,product#2,price#3L]\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_all=df.select(col(\"*\"),first(\"price\").over(win_name_ordered_by_date).alias(\"first_price\"),last(\"price\").over(win_name_ordered_by_date).alias(\"last_price\"))\n",
+    "\n",
+    "df_all.show()\n",
+    "df_all.explain()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "First solution, you can add a custom bound to the window by using **rowsBetween**. Check below example\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+-----+----+\n",
+      "|name|      date|  product|price|last|\n",
+      "+----+----------+---------+-----+----+\n",
+      "|Alex|2018-02-18|   Gloves|    5|  40|\n",
+      "|Alex|2018-03-03|  Brushes|   30|  40|\n",
+      "|Alex|2018-04-02|   Ladder|   20|  40|\n",
+      "|Alex|2018-06-22|    Stool|   20|  40|\n",
+      "|Alex|2018-07-12|   Bucket|    5|  40|\n",
+      "|Alex|2018-09-26|Sandpaper|   10|  40|\n",
+      "|Alex|2018-10-10|    Paint|   80|  40|\n",
+      "|Alex|2018-12-09|   Vacuum|   40|  40|\n",
+      "| Bob|2018-02-18|   Gloves|    5|  40|\n",
+      "| Bob|2018-03-03|  Brushes|   30|  40|\n",
+      "| Bob|2018-07-12|   Bucket|    5|  40|\n",
+      "| Bob|2018-09-26|Sandpaper|   10|  40|\n",
+      "| Bob|2018-12-09|   Vacuum|   40|  40|\n",
+      "+----+----------+---------+-----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# this add a custom bound to the window. start is the Window.unboundedPreceding means the earliest, stop is Window.unboundedFollowing means the last\n",
+    "custom_win_name=win_name_ordered_by_date.rowsBetween(Window.unboundedPreceding,Window.unboundedFollowing)\n",
+    "df_last=df.withColumn(\"last\",last(col(\"price\")).over(custom_win_name))\n",
+    "df_last.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The problem with this solution is that, we get last value of all data set. Not for each partition"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Solution 2 : Use inverse order and take first\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+---------+-----+----+\n",
+      "|name|      date|  product|price|last|\n",
+      "+----+----------+---------+-----+----+\n",
+      "|Alex|2018-12-09|   Vacuum|   40|  40|\n",
+      "|Alex|2018-10-10|    Paint|   80|  40|\n",
+      "|Alex|2018-09-26|Sandpaper|   10|  40|\n",
+      "|Alex|2018-07-12|   Bucket|    5|  40|\n",
+      "|Alex|2018-06-22|    Stool|   20|  40|\n",
+      "|Alex|2018-04-02|   Ladder|   20|  40|\n",
+      "|Alex|2018-03-03|  Brushes|   30|  40|\n",
+      "|Alex|2018-02-18|   Gloves|    5|  40|\n",
+      "| Bob|2018-12-09|   Vacuum|   40|  40|\n",
+      "| Bob|2018-09-26|Sandpaper|   10|  40|\n",
+      "| Bob|2018-07-12|   Bucket|    5|  40|\n",
+      "| Bob|2018-03-03|  Brushes|   30|  40|\n",
+      "| Bob|2018-02-18|   Gloves|    5|  40|\n",
+      "+----+----------+---------+-----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "win_name_ordered_by_reverse_date=win_name.orderBy(col(\"date\").desc())\n",
+    "df_last=df.withColumn(\"last\",first(\"price\").over(win_name_ordered_by_reverse_date))\n",
+    "df_last.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.4.4 Lag"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -617,6 +943,18 @@
     "df_lag.printSchema()\n",
     "df_lag.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 1.4.5 Lead"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
