--- a/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
+++ b/notebooks/pysparkbasics/L02_DataFrame/S04_WindowFunctions/01_WindowFunctionBasics.ipynb
@@ -1275,8 +1275,8 @@
     "## 1.6 Range window specifications example\n",
     "\n",
     "Range window specification will create a sub window inside the main window (created by Window.partitionBy). **Only aggregation functions can apply over range window. Rank or analytic function will raise errors**. To build range window specifications, we need to use the two following functions \n",
-    "- rowsBetween(start:Long,end:Long)-> WindowSpec : Here start, end are the index of rows relative to current rows, -1 means 1 row before current row, 1 mean 1 row after current row\n",
-    "- rangeBetween(start:Long, end:Long)-> WindowSpec : The start, end boundary in rangeBetween is based on row value relative to currentRow. The value definition of the constant values used in range functions:\n",
+    "- rowsBetween(start:Long,end:Long)-> WindowSpec : **Here start, end are the `index` of rows relative to current rows**, -1 means 1 row before current row, 1 mean 1 row after current row\n",
+    "- rangeBetween(start:Long, end:Long)-> WindowSpec : **The start, end boundary in rangeBetween is based on `row value` relative to currentRow**. The value definition of the constant values used in range functions:\n",
     "   - Window.currentRow = 0\n",
     "   - Window.unboundedPreceding = Long.MinValue\n",
     "   - Window.unboundedFollowing = Long.MaxValue\n",
